syntax = "proto3";

package user.pkg.rpc.protos;

option go_package = "protos";

import "user_common.proto";

service AddressController {
    // 用户地址列表
    rpc GetAddressList (GetAddressListRequest) returns (GetAddressListReply) {
    }
    // 单个地址详情
    rpc GetAddressInfo (GetAddressInfoRequest) returns (GetAddressInfoReply) {
    }
    // 修改地址
    rpc SetAddress (SetAddressRequest) returns (SetAddressReply){
    }
    // 添加地址
    rpc CreateAddress (CreateAddressRequest) returns (CreateAddressReply){
    }
    // 删除地址
    rpc DeleteAddress (DeleteAddressRequest) returns (DeleteAddressReply){

    }
}

// 地址信息
message Address {
    // 主键
    uint64 id = 1;
    // userId
    uint64 userId = 2;
    // 收货人
    string receiverName = 3;
    // 性别
    uint64 gender = 4;
    // 国家
    string country = 5;
    // 省份
    string province = 6;
    // 城市
    string city = 7;
    // 区县
    string district = 8;
    // 详细地址
    string address = 9;
    // 标签1家，2公司，3学校
    uint32 tag = 10;
    // 手机号
    string mobile = 11;
    // 是否默认地址1：普通，2默认送货
    uint32 type = 12;
}

// 获取用户地址列表 - 请求
message GetAddressListRequest {
    // UserId
    uint64 userId = 1;
    // 页码
    uint64 page = 2;
    // 条数
    uint64 pageSize = 3;
    // 最后一条 ID
    uint64 lastId = 4;
}

// 获取用户地址列表 - 返回
message GetAddressListReply {
    // 错误信息
    Error err = 1;
    // 地址列表
    repeated Address list = 2;
    // 总数量
    uint64 count = 3;
}

// 获取用户地址 - 请求
message GetAddressInfoRequest {
    // UserId
    uint64 userId = 1;
    // AddressId
    uint64 addressId = 2;
}

// 获取用户地址 - 返回
message GetAddressInfoReply {
    // 错误信息
    Error err = 1;
    // 地址详情
    Address address = 2;
}

// 更新用户地址 - 请求
message SetAddressRequest{
    // 地址详情
    Address address = 1;
}

// 更新用户地址 - 返回
message SetAddressReply{
    // 错误信息
    Error err = 1;
    // 地址详情
    Address address = 2;
}

// 创建用户地址 - 请求
message CreateAddressRequest{
    // 地址详情
    Address address = 1;
}

// 创建用户地址 - 返回
message CreateAddressReply{
    // 错误信息
    Error err = 1;
    // 地址详情
    Address address = 2;
}

// 删除地址 - 请求
message DeleteAddressRequest{
    // 地址 ID
    uint64 addressId = 1;
    // userId
    uint64 userId = 2;
}

// 删除地址 - 返回
message DeleteAddressReply{
    // 错误信息
    Error err = 1;
}